src/test/resources/syntactic/error/TC_ERROR_IF.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 8 | SE ESPERABA: id variable o método, Object, id Struct, IO Y SE ENCONTRO: ) |
start{
    if(); /? if sin expresion
}